feat: fix end of the day leaving

--- a/src/events/CMakeLists.txt
+++ b/src/events/CMakeLists.txt
@@ -11,6 +11,8 @@ add_library(events
     ClientSit.cpp
     ClientLeft.h
     ClientLeft.cpp
+    ClientEndOfDay.h
+    ClientEndOfDay.cpp
 )
 
 target_link_libraries(events PUBLIC output)
